--- a/PaymentJournal.Web/Pages/Components/Budget_View.razor
+++ b/PaymentJournal.Web/Pages/Components/Budget_View.razor
@@ -36,9 +36,9 @@
                         <p class="card-text">
                            @*Content HERE*@
                            Monthly
-                            <table style="width:220px" class="table table-striped table-sm ">
+                            <table style="width:100%" class="table table-striped table-sm ">
                                 <tr>
-                                    <td class="p-1">Total Expense:</td>
+                                        <td class="p-1 text-end">Total Expense:</td>
                                     <td class="red_text">$@Budget.TotalMonthlyExpenses.ToString("0.00")</td>
                                 </tr>
                                 <tr>
@@ -54,7 +54,7 @@
                         <p class="card-text">
                            @*Content HERE*@
                            Yearly
-                            <table style="width:220px" class="table table-striped table-sm ">
+                            <table class="table table-striped table-sm ">
                                 <tr>
                                     <td class="p-1 text-end">Total Expense:</td>
                                     <td class="red_text">$@Budget.TotalYearlyExpenses.ToString("0.00")</td>
@@ -86,7 +86,7 @@
                                 var payGroups = Budget.GetExpensePayGroups();
                                 if(payGroups.Count > 0)
                                     {
-                                                <table style="width:300px" class="table table-sm">
+                                                <table class="table table-sm">
                                                     <thead>
                                                         <tr>
                                                             <td>Account</td>
@@ -120,7 +120,7 @@
                         @*<h5 class="card-title">Card title</h5>*@
                         <p class="card-text">
                             @*Content HERE*@
-                            <table style="width:300px" class="table table-striped table-sm ">
+                            <table style="width:100%" class="table table-striped table-sm ">
                                 <tr>
                                     <td class="p-1 text-end">Half Monthly Expenses:</td>
                                     <td class="blue_text">$@(FormatMoney(Budget.TotalMonthlyExpenses /2))</td>
@@ -166,7 +166,7 @@
 
 
         <div class="alert p-3 m-3 rounded" >
-            <h2>Expenses</h2>
+            <h2>Monthly Expenses</h2>
             @if(Budget.Expenses.Count > 0)
             {
                 <table style="width:900px" class="table table-sm">
@@ -194,11 +194,11 @@
                                             </tr>
                                         </table>
                                     </td>
-                                    <td ><InputText style="width: 150px" disabled=@Disabled @bind-Value="item.BillName" /></td>
-                                    <td ><InputText style="width: 200px" disabled=@Disabled @bind-Value="item.PaidTo" /></td>
+                                    <td ><InputText style="width: 250px" disabled=@Disabled @bind-Value="item.BillName" /></td>
+                                    <td ><InputText style="width: 220px" disabled=@Disabled @bind-Value="item.PaidTo" /></td>
                                     <td ><InputText title="Expecting Last-4 of Account" style="width: 100px" disabled=@Disabled @bind-Value="item.PaidBy" /></td>
-                                    <td ><InputNumber style="width: 80px" disabled=@Disabled @bind-Value="item.Amount" /></td>
-                                    <td ><InputText style="width: 300px" disabled=@Disabled @bind-Value="item.Note" /></td>
+                                    <td ><InputNumber style="width: 150px" disabled=@Disabled @bind-Value="item.Amount" /></td>
+                                    <td ><InputText style="width: 400px" disabled=@Disabled @bind-Value="item.Note" /></td>
                                     <td ><InputNumber style="width: 100px" disabled=@Disabled @bind-Value="item.EstimatedDueDay" /></td>
                                 </tr>
                             }
@@ -210,7 +210,7 @@
         </div>
 
         <div class="alert p-3 m-3 rounded" >
-            <h2>Income</h2>
+            <h2>Monthly Income</h2>
             @if(Budget.Incomes.Count > 0)
             {
                 <table style="width:550px" class="table table-sm">
@@ -235,9 +235,9 @@
                                             </tr>
                                         </table>
                                     </td>
-                                    <td ><InputText style="width: 200px" disabled=@Disabled @bind-Value="item.Employer" /></td>
-                                    <td ><InputText style="width: 150px" disabled=@Disabled @bind-Value="item.Type" /></td>
-                                    <td ><InputNumber style="width: 80px" disabled=@Disabled @bind-Value="item.Amount" /></td>
+                                    <td ><InputText style="width: 250px" disabled=@Disabled @bind-Value="item.Employer" /></td>
+                                    <td ><InputText style="width: 250px" disabled=@Disabled @bind-Value="item.Type" /></td>
+                                    <td ><InputNumber style="width: 150px" disabled=@Disabled @bind-Value="item.Amount" /></td>
                                 </tr>
                             }
                     </tbody>
@@ -278,7 +278,7 @@
                                     <td ><InputText style="width: 250px" disabled=@Disabled @bind-Value="item.Bank" /></td>
                                     <td ><InputText style="width: 150px" disabled=@Disabled @bind-Value="item.Type" /></td>
                                     <td ><InputText title="Expecting Last-4 of Account" style="width: 150px" disabled=@Disabled @bind-Value="item.AccountNumber" /></td>
-                                    <td ><InputText style="width: 300px" disabled=@Disabled @bind-Value="item.Description" /></td>
+                                    <td ><InputText style="width: 400px" disabled=@Disabled @bind-Value="item.Description" /></td>
                                 </tr>
                             }
                     </tbody>
@@ -320,7 +320,7 @@
                                     <td ><InputText title="Expecting Last-4 of Account" style="width: 100px" disabled=@Disabled @bind-Value="item.AccountNumber" /></td>
                                     <td ><InputText style="width: 200px" disabled=@Disabled @bind-Value="item.Bank" /></td>
                                     <td ><InputText title="Expecting Last-4 of Account" style="width: 100px" disabled=@Disabled @bind-Value="item.AttachedTo" /></td>
-                                    <td ><InputText style="width: 300px" disabled=@Disabled @bind-Value="item.Description" /></td>
+                                    <td ><InputText style="width: 400px" disabled=@Disabled @bind-Value="item.Description" /></td>
                                     <td ><InputCheckbox title="Is This a Debt Card" style="width: 50px" disabled=@Disabled @bind-Value="item.IsDebt" /></td>
                                 </tr>
                             }
@@ -354,7 +354,7 @@
                                             </tr>
                                         </table>
                                     </td>
-                                    <td ><InputText style="width: 150px" disabled=@Disabled @bind-Value="item.Service" /></td>
+                                    <td ><InputText style="width: 250px" disabled=@Disabled @bind-Value="item.Service" /></td>
                                     <td ><InputText title="Expecting Last-4 of Account" style="width: 100px" disabled=@Disabled @bind-Value="item.PaidTo" /></td>
                                 </tr>
                             }
