--- a/PaymentJournal.Web/Shared/MainLayout.razor
+++ b/PaymentJournal.Web/Shared/MainLayout.razor
@@ -2,18 +2,41 @@
 
 <PageTitle>Payment Journal</PageTitle>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<MudThemeProvider IsDarkMode="true" />
+<MudDialogProvider />
+<MudSnackbarProvider />
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://github.com/icodeintx/paymentjournal" target="_blank">Payment Journal on GitHub</a>
-        </div>
+@*<a href="https://github.com/icodeintx/paymentjournal" target="_blank">Payment Journal on GitHub</a>*@
 
-        <article class="content px-4">
+<MudLayout>
+    <MudAppBar>
+        @*<MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />*@
+        <MudText Align="Align.Left" Class="ml-3">Payment Journal</MudText>
+    </MudAppBar>
+    <MudDrawer @bind-Open="@_drawerOpen">
+        <NavMenu/>
+    </MudDrawer>
+    <MudMainContent>
+        <MudPaper Width="100%" Class="darkbackground">
+            <MudContainer >
                 @Body
-        </article>
-    </main>
-</div>
+
+                <footer class="py-3 my-4">
+                    <div class="border-bottom pb-3 mb-3"></div>
+                    <p class="text-center text-muted">&copy; 2019-2022 AmaraCode LLC</p>
+                </footer>
+            </MudContainer>
+        </MudPaper>
+    </MudMainContent>
+</MudLayout>
+
+
+
+@code {
+    bool _drawerOpen = true;
+
+    void DrawerToggle()
+    {
+        _drawerOpen = !_drawerOpen;
+    }
+}
