more updates many more to go

--- a/PaymentJournal.Web/wwwroot/css/site.css
+++ b/PaymentJournal.Web/wwwroot/css/site.css
@@ -25,11 +25,11 @@ html, body {
 }
 
 .red_text {
-    color: red;
+    color: mediumvioletred;
 }
 
 .blue_text {
-    color: blue;
+    color: cornflowerblue;
 }
 
 .infobox {
